force-app/main/default/objects/AVO_Process__c/AVO_Process__c.object-meta.xml
<CustomObject>
    <label>Process</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>