force-app/main/default/objects/AVO_Process__c/fields/Avo_Active__c.field-meta.xml
<CustomField>
    <fullName>Avo_Active__c</fullName>
    <formula>IF( AND(Avo_Effective_Start_Date__c&lt;TODAY(),
(OR(ISBLANK(Avo_Effective_End_Date__c),
Avo_Effective_End_Date__c&gt; TODAY())
)
),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>