force-app/main/default/objects/AVO_Process__c/fields/Avo_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Avo_Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>