force-app/main/default/objects/AVO_Process__c/fields/Avo_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Avo_Effective_Start_Date__c</fullName>
    <defaultValue>DATE(2021,1,1)</defaultValue>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>