force-app/main/default/objects/AVO_Process__c/fields/Avo_Planning_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Planning_Application_Type__c</fullName>
    <label>Planning Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Planning_Application_Type</valueSetName>
    </valueSet>
</CustomField>