force-app/main/default/objects/AVO_Process__c/fields/Avo_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Process_Type__c</fullName>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permit Process</fullName>
            </value>
            <value>
                <fullName>Planning Application Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>