force-app/main/default/objects/AVO_Process__c/recordTypes/Avo_Permit_Process.recordType-meta.xml
<RecordType>
    <fullName>Avo_Permit_Process</fullName>
    <active>true</active>
    <label>Permit Process</label>
</RecordType>