force-app/main/default/objects/AVO_Process__c/recordTypes/Avo_Planning_Application_Process.recordType-meta.xml
<RecordType>
    <fullName>Avo_Planning_Application_Process</fullName>
    <active>true</active>
    <label>Planning Application Process</label>
</RecordType>