force-app/main/default/objects/AVO_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Avo_Process_Type__c</columns>
    <columns>Avo_Permit_Type__c</columns>
    <columns>Avo_Planning_Application_Type__c</columns>
    <columns>Avo_Effective_Start_Date__c</columns>
    <columns>Avo_Effective_End_Date__c</columns>
    <columns>Avo_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>