force-app/main/default/objects/AVO_Process__c/listViews/Applications.listView-meta.xml
<ListView>
    <fullName>Applications</fullName>
    <columns>NAME</columns>
    <columns>Avo_Process_Type__c</columns>
    <columns>Avo_Planning_Application_Type__c</columns>
    <columns>Avo_Effective_Start_Date__c</columns>
    <columns>Avo_Effective_End_Date__c</columns>
    <columns>Avo_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Avo_Process_Type__c</field>
        <operation>equals</operation>
        <value>Planning Application Process</value>
    </filters>
    <label>Applications</label>
</ListView>