force-app/main/default/objects/AVO_Process__c/listViews/Permits.listView-meta.xml
<ListView>
    <fullName>Permits</fullName>
    <columns>NAME</columns>
    <columns>Avo_Process_Type__c</columns>
    <columns>Avo_Permit_Type__c</columns>
    <columns>Avo_Effective_Start_Date__c</columns>
    <columns>Avo_Effective_End_Date__c</columns>
    <columns>Avo_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Avo_Process_Type__c</field>
        <operation>equals</operation>
        <value>Permit Process</value>
    </filters>
    <label>Permits</label>
</ListView>